Update descriptions for all api samples

--- a/api-samples/contentSettings/manifest.json
+++ b/api-samples/contentSettings/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Content settings",
   "version": "0.3",
-  "description": "This sample demonstrates using chrome.contentSettings to display the settings of a given page in the extension's popup.",
+  "description": "Uses chrome.contentSettings to display the settings of a given page in the extension's popup.",
   "permissions": ["contentSettings", "activeTab"],
   "action": {
     "default_icon": "contentSettings.png",
