--- a/api-samples/richNotification/manifest.json
+++ b/api-samples/richNotification/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Notifications API sample",
-  "description": "An extension that cycles through template types of notifications whenever the user interacts with one.",
+  "description": "Demonstrates the creation of, and interaction with, each of the notification template types.",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
