--- a/api-samples/scripting/manifest.json
+++ b/api-samples/scripting/manifest.json
@@ -2,6 +2,7 @@
   "name": "Scripting API Demo",
   "version": "1.0",
   "manifest_version": 3,
+  "description": "Uses the chrome.scripting API to inject JavaScript into web pages.",
   "background": {
     "service_worker": "sw.js"
   },
