--- a/api-samples/devtools/panels/manifest.json
+++ b/api-samples/devtools/panels/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Chrome Query",
+  "name": "Devtools - Chrome Query",
   "version": "1.2",
-  "description": "Extends the Developer Tools, adding a sidebar that displays the jQuery data associated with the selected DOM element.",
+  "description": "Uses the devtools API to add a sidebar that displays the jQuery data associated with the selected DOM element.",
   "devtools_page": "devtools.html",
   "manifest_version": 3
 }
