--- a/api-samples/history/showHistory/manifest.json
+++ b/api-samples/history/showHistory/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Typed URL History",
   "version": "1.3",
-  "description": "Reads your history and uses the transition type of each history item to filter out a list of the top ten pages you go to specifically by typing the URL.",
+  "description": "Uses the chrome.history API to display in a popup the user's most visited pages.",
   "permissions": ["history"],
   "action": {
     "default_popup": "typed-urls.html",
