--- a/api-samples/sandbox/sandbox/manifest.json
+++ b/api-samples/sandbox/sandbox/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Sandboxed Frame Sample",
   "version": "1.0.3",
+  "description": "This sample creates a tab with a sandboxed iframe to which the main page passes a counter variable.",
   "manifest_version": 3,
   "background": {
     "service_worker": "service-worker.js"
