--- a/api-samples/tabCapture/manifest.json
+++ b/api-samples/tabCapture/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Tab Capture Example",
-  "description": "Capture a tab and play in a <video> element in a separate window.",
+  "description": "Demonstrates how to use the chrome.tabCapture API.",
   "version": "1",
   "manifest_version": 3,
   "action": {
