--- a/api-samples/topSites/magic8ball/manifest.json
+++ b/api-samples/topSites/magic8ball/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "topSites API sample",
   "version": "2",
-  "description": "An extension that demonstrates the chrome.topSites API by registering a custom new tab page.",
+  "description": "Uses the chrome.topSites API to suggest which sites a user should visit.",
   "chrome_url_overrides": {
     "newtab": "newTab.html"
   },
