--- a/functional-samples/cookbook.offscreen-clipboard-write/manifest.json
+++ b/functional-samples/cookbook.offscreen-clipboard-write/manifest.json
@@ -2,7 +2,7 @@
   "name": "Offscreen API - Clipboard",
   "version": "1.0",
   "manifest_version": 3,
-  "description": "This recipe shows how to write a string to the system clipboard using the offscreen document",
+  "description": "This recipe shows how to write a string to the system clipboard using the offscreen document.",
   "background": {
     "service_worker": "background.js"
   },
