--- a/functional-samples/cookbook.offscreen-dom/manifest.json
+++ b/functional-samples/cookbook.offscreen-dom/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Offscreen API - DOM Parsing",
   "version": "1.0",
-  "description": "This recipe shows how to use DOMParser in an Extension Service Worker using the offscreen document",
+  "description": "This recipe shows how to use DOMParser in an Extension Service Worker using the offscreen document.",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
