--- a/functional-samples/cookbook.sidepanel-multiple/manifest.json
+++ b/functional-samples/cookbook.sidepanel-multiple/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Multiple side panels",
   "version": "1.0",
-  "description": "Displays welcome side panel on installation, then shows the main panel",
+  "description": "This recipe shows how to use sidePanel.getOptions() to retrieve the current side panel and switch between side panels.",
   "background": {
     "service_worker": "service-worker.js"
   },
@@ -13,4 +13,3 @@
   },
   "permissions": ["sidePanel"]
 }
-
