--- a/api-samples/action/manifest.json
+++ b/api-samples/action/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Action API Demo",
   "version": "1.0",
-  "description": "Uses the of Action API to change the badge text,icon,hover text or popup page.",
+  "description": "Uses the of Action API to change the badge text, icon, hover text, or popup page.",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
