--- a/functional-samples/cookbook.geolocation-popup/manifest.json
+++ b/functional-samples/cookbook.geolocation-popup/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Geolocation - popup",
   "version": "1.0",
-  "description": "This recipe shows how to get geolocation access within a popup.",
+  "description": "Shows how to get geolocation access within a popup.",
   "manifest_version": 3,
   "action": {
     "default_popup": "popup.html"
