--- a/functional-samples/sample.co2meter/manifest.json
+++ b/functional-samples/sample.co2meter/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CO2 meter extension",
-  "description": "An extension that connects to a CO2 meter using WebHID extension service workers",
+  "description": "Demonstrates using WebHID to connect to a CO2 meter.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
