--- a/api-samples/bookmarks/manifest.json
+++ b/api-samples/bookmarks/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Bookmark Viewer",
   "version": "1.0",
-  "description": "A simple Chrome extension to display bookmarks",
+  "description": "Uses the chrome.bookmarks API to search through, add, and delete bookmarks from the user's bookmark tree.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
