--- a/api-samples/debugger/manifest.json
+++ b/api-samples/debugger/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Debugger Extension",
-  "description": "Demonstrates the API by attaching a debugger to a webpage and capturing network data.",
+  "description": "Uses the chrome.debugger API to capture network events on web pages.",
   "version": "1.0",
   "permissions": ["debugger", "tabs"],
   "host_permissions": ["https://www.google.com/*"],
