--- a/api-samples/tabs/zoom/manifest.json
+++ b/api-samples/tabs/zoom/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Tabs Zoom API Demo",
+  "name": "Tabs zoom API Demo",
   "description": "Uses the tabs.zoom API to manipulate the zoom level of the current tab.",
   "version": "0.1",
   "icons": {
