Apply suggestions from code review
Co-authored-by: Joe Medley <jmedley@google.com>

--- a/api-samples/downloads/download_filename_controller/manifest.json
+++ b/api-samples/downloads/download_filename_controller/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Download Filename Controller",
-  "description": "Download Filename Controller",
+  "description": "Demonstrates using the chrome.downloads API to control the names of files being downloaded.",
   "version": "0.1",
   "background": {
     "service_worker": "service-worker.js"
