--- a/functional-samples/tutorial.puppeteer/package.json
+++ b/functional-samples/tutorial.puppeteer/package.json
@@ -2,9 +2,13 @@
   "name": "puppeteer-demo",
   "version": "1.0",
   "dependencies": {
+    "jest": "^29.7.0",
     "puppeteer": "^21.3.6"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "jest ."
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0"
   }
 }
