--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-prettier": "4.2.1",
     "husky": "8.0.0",
     "lint-staged": "13.1.2",
