--- a/api-samples/readingList/manifest.json
+++ b/api-samples/readingList/manifest.json
@@ -2,7 +2,7 @@
   "name": "Reading List API Demo",
   "version": "1.0",
   "manifest_version": 3,
-  "description": "Uses the chrome.readingList API to display reading list entries.",
+  "description": "Uses the chrome.readingList API to display, update and remove reading list entries.",
   "background": {
     "service_worker": "sw.js"
   },
