--- a/api-samples/readingList/manifest.json
+++ b/api-samples/readingList/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Reading List API Demo",
   "version": "1.0",
+  "minimum_chrome_version": "120",
   "manifest_version": 3,
   "description": "Uses the chrome.readingList API to display, update and remove reading list entries.",
   "background": {
