--- a/api-samples/userScripts/manifest.json
+++ b/api-samples/userScripts/manifest.json
@@ -2,6 +2,7 @@
   "name": "User Scripts API Demo",
   "version": "1.0",
   "manifest_version": 3,
+  "minimum_chrome_version": "120",
   "description": "Uses the chrome.userScripts API to inject JavaScript into web pages.",
   "background": {
     "service_worker": "sw.js"
