--- a/functional-samples/cookbook.file_handlers/manifest.json
+++ b/functional-samples/cookbook.file_handlers/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "File Handling API",
+  "name": "File Handling Demo",
   "version": "1.0",
   "minimum_chrome_version": "120",
-  "description": "Shows how to use the file_handlers manifest key.",
+  "description": "Shows how to use the file_handlers manifest key with the web platform's Launch Handler API.",
   "manifest_version": 3,
   "file_handlers": [
     {
