address review comments

--- a/functional-samples/cookbook.push/manifest.json
+++ b/functional-samples/cookbook.push/manifest.json
@@ -5,7 +5,5 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": [
-    "notifications"
-  ]
+  "permissions": ["notifications"]
 }
