--- a/api-samples/management/manifest.json
+++ b/api-samples/management/manifest.json
@@ -9,9 +9,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "sample.png",
-      "48": "sample.png",
-      "128": "sample.png"
+      "16": "images/sample.png",
+      "48": "images/sample.png",
+      "128": "images/sample.png"
     }
   }
 }
