--- a/functional-samples/sample.webgpu/manifest.json
+++ b/functional-samples/sample.webgpu/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "WebGPU Extension",
-  "description": "Generate a red triangle with WebGPU in a service worker.",
+  "description": "Generate a red triangle with WebGPU in an extension service worker.",
   "version": "1.0",
   "action": {
     "default_title": "Click to see a red triangle"
