--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/GoogleChrome/chrome-extensions-samples#readme",
   "devDependencies": {
-    "chrome-types": "^0.1.281",
-    "eslint": "8.57.0",
+    "@eslint/js": "9.1.1",
+    "chrome-types": "0.1.281",
+    "eslint": "9.1.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jest": "28.2.0",
     "eslint-plugin-prettier": "5.1.3",
+    "globals": "15.0.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "prettier": "3.2.5"
