--- a/.allstar/binary_artifacts.yaml
+++ b/.allstar/binary_artifacts.yaml
@@ -1,3 +1,11 @@
 # Ignore reason: Packed extension for demo purposes.
 ignorePaths:
   - _archive/mv2/api/permissions/extension-questions.crx
+echo "# GitTest1" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/yuvaharish/GitTest1.git
+
+git push -u origin main
