--- a/functional-samples/ai.gemini-in-the-cloud/package.json
+++ b/functional-samples/ai.gemini-in-the-cloud/package.json
@@ -1,8 +1,12 @@
 {
   "name": "Chrome Extensions Gemini Demo",
   "version": "1.0",
-  "dependencies": {
-    "@google/generative-ai": "^0.15.0"
+  "scripts": {
+    "build": "rollup sidepanel/index.js --file dist/sidepanel.bundle.js --format iife"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@google/generative-ai": "0.15.0",
+    "rollup": "4.19.0"
+  }
 }
