--- a/functional-samples/ai.gemini-on-device-summarization/package.json
+++ b/functional-samples/ai.gemini-on-device-summarization/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "quizzify",
+  "name": "Summarization Example",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "background.js",
@@ -7,12 +8,11 @@
     "build": "rollup -c rollup.config.mjs"
   },
   "keywords": [],
-  "author": "",
   "license": "Apache 2.0",
   "devDependencies": {
-    "@mozilla/readability": "^0.5.0",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^4.18.1"
+    "@mozilla/readability": "0.5.0",
+    "@rollup/plugin-commonjs": "26.0.1",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "rollup": "4.18.1"
   }
 }
