--- a/functional-samples/ai.gemini-in-the-cloud/manifest.json
+++ b/functional-samples/ai.gemini-in-the-cloud/manifest.json
@@ -6,7 +6,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["sidePanel"],
+  "permissions": ["sidePanel", "tabs"],
+  "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "sidepanel/index.html"
   },
