--- a/functional-samples/ai.gemini-on-device-summarization/package.json
+++ b/functional-samples/ai.gemini-on-device-summarization/package.json
@@ -14,6 +14,8 @@
     "@rollup/plugin-commonjs": "26.0.1",
     "@rollup/plugin-node-resolve": "15.2.3",
     "rollup": "4.22.4",
+    "dompurify": "3.1.6",
+    "marked": "14.1.2",
     "rollup-plugin-copy": "^3.5.0"
   }
 }
