Revert "Rename addSiteAccessRequest to addHostAccessRequest (#1356)"
This reverts commit 74e1edfac33279bad08c85445fec029a9cfe80f8.

--- a/functional-samples/cookbook.permissions-addsiteaccessrequest/manifest.json
+++ b/functional-samples/cookbook.permissions-addsiteaccessrequest/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Permissions (Add Host Access Request)",
-  "description": "Uses the `permissions.addHostAccessRequest()` API to request access to a site.",
+  "name": "Permissions (Add Site Access Request)",
+  "description": "Uses the `permissions.addSiteAccessRequest()` API to request access to a site.",
   "version": "0.3",
   "background": {
     "service_worker": "background.js"
