updating manifest.json

--- a/functional-samples/cookbook.push/manifest.json
+++ b/functional-samples/cookbook.push/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "Service worker with silent push message",
+  "name": "Web Push Extension",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "permissions": ["notifications"]
 }
