Updated UI designs for optional_permissions examples of both mv2 and mv3
Using chrome's build in favicon provider for optional_permissions examples

--- a/_archive/mv2/extensions/optional_permissions/manifest.json
+++ b/_archive/mv2/extensions/optional_permissions/manifest.json
@@ -2,7 +2,7 @@
   "name": "Optional Permissions New Tab",
   "version": "1.2.5.0",
   "description": "Demonstrates optional permissions in extensions",
-  "permissions": ["storage"],
+  "permissions": ["storage", "chrome://favicon/*"],
   "optional_permissions": [
     "topSites"
   ],
