--- a/functional-samples/sample.optional_permissions/manifest.json
+++ b/functional-samples/sample.optional_permissions/manifest.json
@@ -2,7 +2,7 @@
   "name": "Optional Permissions New Tab",
   "version": "1.0.0",
   "description": "Demonstrates optional permissions in extensions",
-  "permissions": ["storage"],
+  "permissions": ["storage", "favicon"],
   "optional_permissions": ["topSites"],
   "icons": {
     "16": "images/icon16.png",
