--- a/functional-samples/ai.gemini-on-device-alt-texter/manifest.json
+++ b/functional-samples/ai.gemini-on-device-alt-texter/manifest.json
@@ -3,8 +3,7 @@
   "name": "Alt Texter",
   "version": "1.0",
   "description": "Generates alt text for images using the Gemini Nano Prompt API.",
-  "permissions": ["contextMenus", "clipboardWrite"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": ["contextMenus", "clipboardWrite", "activeTab"],
   "minimum_chrome_version": "138",
   "background": {
     "service_worker": "background.js"
