--- a/functional-samples/sample.favicon-cs/manifest.json
+++ b/functional-samples/sample.favicon-cs/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Favicon API in content scripts",
   "version": "1.1",
-  "description": "Demonstrates fetching the favicon from www.google.com and inserting it at the top left of every page.",
+  "description": "Demonstrates fetching the favicon from www.google.com and inserting it at the top left of the specified pages.",
   "manifest_version": 3,
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.google.com/*"],
       "js": ["content.js"],
       "css": ["style.css"]
     }
@@ -14,7 +14,7 @@
   "web_accessible_resources": [
     {
       "resources": ["_favicon/*"],
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.google.com/*"],
       "use_dynamic_url": true
     }
   ]
